# ruoyi-fastapi-full-stack

./: .deploy.env.example  .env  .gitignore  CLAUDE.md  DEPLOYMENT_CHECKLIST.md  DOCKER-COMMANDS.md  MINIMAL_REFLECTION.md  README-Docker.md  README.md  docker-compose.yml  docker-deploy.ps1  docker-deploy.sh  fastapi-dockerfile  nginx-dockerfile  package.json  postgres-dockerfile  redis-dockerfile  start.ps1
backend/: .env.docker  .env.prod  app.py  init_chat_data.py  pyproject.toml  quick_fix.py  remove_chat_auth.py  requirements-pg.txt  requirements.txt  server.py  start_and_test.py  start_server.bat  start_server.py  test_chat_api.py  test_chat_full.py  test_db.py  test_db2.py  test_simple.py
backend/config/: database.py  env.py  get_db.py  get_redis.py  get_scheduler.py
backend/docs/bugs/: 01-序列化时的错误.md  02-路由路径匹配冲突导致的参数解析错误.md
backend/docs/diagrams/: 05-data-flow.md  07-file-upload.md  08-scheduled-tasks.md  09-tree-structure.md  10-cache-usage.md  11-dict-management.md  13-operation-log.md  15-system-config.md  16-exception-handling.md  17-database-pool.md  19-notice-announcement.md  22-sql-optimization.md  39-frontend-router-permission.md  43-docker-deployment.md  44-cicd-pipeline.md  47-multi-environment-config.md  49-internationalization.md  50-frontend-build-optimization.md  51-websocket-realtime.md  (+2 more)
backend/exceptions/: exception.py
backend/middlewares/: gzip_middleware.py
backend/module_chat/: README.md  __init__.py  application.py
backend/module_task/: 每日任务管理接口文档.md
backend/module_todo/: __init__.py
backend/utils/: common_util.py  pwd_util.py
(+485 files in other folders)
